# KnowYourFan_FURIA_case

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
data/: players.json  players_vectors.json
utils/: generate_player_embeddings.py  ocr.py  storage.py  vectorizer.py
