[project]
name = "knowyourfan"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "easyocr>=1.7.2",
    "firebase-admin>=6.8.0",
    "hf-xet>=1.1.0",
    "pymupdf>=1.25.5",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "streamlit>=1.45.0",
]
